Catch ApiErrors mostly, wrap in PocketPagesError to inherit Error

--- a/packages/starters/custom-errors/pb_hooks/pages/_private/error-details.ejs
+++ b/packages/starters/custom-errors/pb_hooks/pages/_private/error-details.ejs
@@ -16,13 +16,20 @@
 <br />
 
 <div>
-  <p><%% stringify(response.error().originalError) %>: </p>
-  <code><%- stringify(response.error().originalError) %></code>
+  <p><%% stringify(response.error().message) %>: </p>
+  <code><%- stringify(response.error().message) %></code>
 </div>
 
 <br />
 
 <div>
-  <p><%% stringify(response.error().message) %>: </p>
-  <code><%- stringify(response.error().message) %></code>
+  <p><%% stringify(response.error().data) %>: </p>
+  <code><%- stringify(response.error().data) %></code>
+</div>
+
+<br />
+
+<div>
+  <p><%% stringify(response.error().pocketbaseApiError) %>: </p>
+  <code><%- stringify(response.error().pocketbaseApiError) %></code>
 </div>
