--- a/packages/starters/custom-errors/pb_hooks/pages/504.ejs
+++ b/packages/starters/custom-errors/pb_hooks/pages/504.ejs
@@ -3,4 +3,4 @@
 
 <p>It seems there was a server error while processing your request.</p>
 
- <%- include('error-details.ejs') %>
+<%- include('_error-details.ejs') %>
