--- a/packages/starters/custom-errors/pb_hooks/pages/40x.ejs
+++ b/packages/starters/custom-errors/pb_hooks/pages/40x.ejs
@@ -3,4 +3,4 @@
 
 <p>It seems the page you are looking for does not exist.</p>
 
- <%- include('error-details.ejs') %>
+<%- include('_error-details.ejs') %>
