--- a/packages/starters/custom-errors/pb_hooks/pages/error.ejs
+++ b/packages/starters/custom-errors/pb_hooks/pages/error.ejs
@@ -1,5 +1,5 @@
 <!-- slot:title -->
- <%= response.status() %> | PocketPages
+<%= response.status() %> | PocketPages
 
 <!-- slot:content -->
- <%- include('error-details.ejs') %>
+<%- include('_error-details.ejs') %>
